# parallel-prog

./: .gitignore
Lab4/: CMakeLists.txt  base.hpp  block.hpp  block_cycle.hpp  cycle.hpp  cycle_for.hpp  main.cpp  settings.hpp
Lab5/: CMakeLists.txt  example2.cpp  main.cpp
